--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.5.1'
     testImplementation 'org.mockito:mockito-core:3.2.0'
     implementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.3.1'
 }
